--- a/src/components/Production/Cards.css
+++ b/src/components/Production/Cards.css
@@ -35,7 +35,7 @@
     background-position: center;
     background-size: cover;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .back {
